
* Tue Jul  1 07:14:15 2003, richlowe <richlowe@richlowe.net>
  * raggle: Make ListWindow#draw_items do it's own clearing, as
            TextWindow#draw_items does, and remove the calls to .clear
	    that this invalidates.  Unfortunately, the TextWindow#clear
	    calls can't be removed, since the Description, and article
	    bodies would require blanking possible arbitrary lines in the
	    switch, and it seems overkill to code up a func to blank
	    unchanged lines, to avoid a redraw in that case.

* Tue Jul  1 07:58:57 2003, richlowe <richlowe@richlowe.net>
  * raggle: Fix some typos (and spelling errors) in comments and documentation.

* Wed Jul 02 21:58:48 2003, pabs <pabs@pablotron.org>
  * raggle: fix the find_browser() bug reported and patched by Jon
    Bernard (jbernard@roanoke.edu) and Claes Nasten (pekdon@pekdon.net)
    (and someone else maybe?)
  * raggle: make die() take multiple arguments. ala puts

* Thu Jul 03 15:15:19 2003, pabs <pabs@pablotron.org>
  * raggle: escape % in die strings.  Based on a patch from
    Nikolai Weibull (lone-star@home.se)
	
* Thu Jul 03 16:06:09 2003, pabs <pabs@pablotron.org>
  * raggle: args => *args in die()

* Thu Jul 03 16:08:05 2003, pabs <pabs@pablotron.org>
  * raggle: i don't like "Eeeeeek"

* Thu Jul 03 16:12:32 2003, pabs <pabs@pablotron.org>
  * raggle: switch order of $config['diag'] conditional (move it
    outside rescue block).  screen cleanup wasn't happening properly
    for error messages because of this rescue block.

* Thu Jul 03 16:16:17 2003, pabs <pabs@pablotron.org>
  * raggle: don't draw if text == nil or text.size <= 0 in
    draw_text

* Thu Jul 03 21:08:51 2003, pabs <pabs@pablotron.org>
  * ChangeLog: attributed % escape in die() to correct person

* Thu Jul 03 22:04:09 2003, pabs <pabs@pablotron.org>
  * AUTHORS: updated to reflect all the new patches

* Thu Jul 03 22:15:38 2003, pabs <pabs@pablotron.org>
  * TODO: added some new stuff, marked off finished stuff