@@ -886,3 +886,8 @@
 
 * Thu Jul 03 22:15:38 2003, pabs <pabs@pablotron.org>
   * TODO: added some new stuff, marked off finished stuff
+
+* Fri Jul 04 18:14:19 2003, pabs <pabs@pablotron.org>
+  * doc/pauls_feeds.yaml: remove Digital Theatre; it's nothing but
+    trouble
+
